[package]
name = "esercizi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_pcg = { version = "0.3.1", features = ["serde1"] }
serde = { version = "1.0.197", features = ["derive", "rc"] }
typetag = "0.2.16"
dyn-clone = "1.0.17"
